another instances fix

--- a/application/templates/instance.html
+++ b/application/templates/instance.html
@@ -33,6 +33,20 @@
             <br>
             <br>
             <br>
+            <div class="form-group">
+                {{ form.campaign_id.label }}
+                {{ form.campaign_id }}
+                </div>
+            
+                {% endif %}
+                <div class="form-group">
+                    {{ form.character_id.label }}
+                    {{ form.character_id }}
+                </div>
+            <br>
+            <br>
+            <br>
+
             <div class='form_group'>
                 {{ form.submit }}
             </div>
