another instances fix

--- a/application/templates/instance.html
+++ b/application/templates/instance.html
@@ -34,13 +34,11 @@
             <br>
             <br>
             <div class="form-group">
-                {{ form.campaign_id.label }}
-                {{ form.campaign_id }}
+                {{ form.campaigns_id }}
                 </div>
             
                 <div class="form-group">
-                    {{ form.character_id.label }}
-                    {{ form.character_id }}
+                    {{ form.characters_id }}
                 </div>
             <br>
             <br>
