--- a/application/templates/instance.html
+++ b/application/templates/instance.html
@@ -34,11 +34,11 @@
             <br>
             <br>
             <div class="form-group">
-                {{ form.campaigns_id }}
+                {{ form.campaigns_id.label }}
                 </div>
             
                 <div class="form-group">
-                    {{ form.characters_id }}
+                    {{ form.characters_id.label }}
                 </div>
             <br>
             <br>
