--- a/application/templates/instance.html
+++ b/application/templates/instance.html
@@ -32,14 +32,15 @@
             </div>
             <br>
             <br>
-            <br>
             <div class="form-group">
                 {{ form.campaigns_id.label }}
-    
+                {{ form campaigns_id }}
                 </div>
-            
+            <br>
+            <br>
                 <div class="form-group">
                     {{ form.characters_id.label }}
+                    {{ form.characters_id }}
                 </div>
             <br>
             <br>
