instances html addition

--- a/application/templates/instance.html
+++ b/application/templates/instance.html
@@ -34,7 +34,7 @@
             <br>
             <div class="form-group">
                 {{ form.campaigns_id.label }}
-                {{ form campaigns_id }}
+                {{ form.campaigns_id }}
                 </div>
             <br>
             <br>
