instances html addition

--- a/application/templates/instance.html
+++ b/application/templates/instance.html
@@ -32,13 +32,13 @@
             </div>
             <br>
             <br>
-            <div class="form-group">
+            <div class="form-group" method="POST">
                 {{ form.campaigns_id.label }}
                 {{ form.campaigns_id }}
                 </div>
             <br>
             <br>
-                <div class="form-group">
+                <div class="form-group" method="POST">
                     {{ form.characters_id.label }}
                     {{ form.characters_id }}
                 </div>
