instances html addition

--- a/application/templates/instance.html
+++ b/application/templates/instance.html
@@ -32,15 +32,15 @@
             </div>
             <br>
             <br>
-            <div class="form-group" method="POST">
+            <div class="form-group">
                 {{ form.campaigns_id.label }}
-                {{ form.campaigns_id }}
+                {{ form.campaigns_id.items }}
                 </div>
             <br>
             <br>
-                <div class="form-group" method="POST">
+                <div class="form-group">
                     {{ form.characters_id.label }}
-                    {{ form.characters_id }}
+                    {{ form.characters_id.items }}
                 </div>
             <br>
             <br>
