instances html addition

--- a/application/templates/instance.html
+++ b/application/templates/instance.html
@@ -33,14 +33,14 @@
             <br>
             <br>
             <div class="form-group">
-                {{ form.campaigns_id.label }}
-                {{ form.campaigns_id.items }}
+                {{ form.campaign_id.label }}
+                <select form="campaign_id">Campaign id</select>
                 </div>
             <br>
             <br>
                 <div class="form-group">
-                    {{ form.characters_id.label }}
-                    {{ form.characters_id.items }}
+                    {{ form.character_id.label }}
+                    <select form="characters_id">Characters id</select>
                 </div>
             <br>
             <br>
