instances html addition

--- a/application/templates/instance.html
+++ b/application/templates/instance.html
@@ -34,7 +34,7 @@
             <br>
             <div class="form-group">
                 {{ form.campaign_id.label }}
-                <select form="campaign_id">Campaign id</select>
+                <select form="campaigns_id">Campaign id</select>
                 </div>
             <br>
             <br>
