--- a/application/templates/instance.html
+++ b/application/templates/instance.html
@@ -33,13 +33,13 @@
             <br>
             <br>
             <div class="form-group">
-                {{ form.campaign_id.label }}
+                {{ form.campaigns_id.label }}
                 <select form="campaigns_id">Campaign id</select>
                 </div>
             <br>
             <br>
                 <div class="form-group">
-                    {{ form.character_id.label }}
+                    {{ form.characters_id.label }}
                     <select form="characters_id">Characters id</select>
                 </div>
             <br>
