--- a/application/templates/instance.html
+++ b/application/templates/instance.html
@@ -36,8 +36,8 @@
                 {{ form.campaigns_id.label }}
                 <select form="campaigns_id">
                 {% for choice in campaigns_id %}
-                <option value="{{ choice }}">{{ choice[1] }}</option>
-                { endfor }
+                    <option value="{{ choice }}">{{ choice[1] }}</option>
+                {% endfor %}
                 </select>
                 </div>
             <br>
